--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,12 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      SOLANA_LATEST_VERSION: 1.8.11
     strategy:
       matrix:
-        solana-version: ["1.6.22", "1.8.11"]
-        solana-network: ["devnet", "testnet"]
+        solana-version: ["1.9.12"] # Will use in future to publish new/multiple verisons
+        solana-network: ["devnet"] # Will use in future to support preconfigured networkds
     steps:
       -
         name: Checkout
@@ -35,7 +33,7 @@ jobs:
           context: .
           file: Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ matrix.solana-version }}
+          tags: codedawi/solana:${{ matrix.solana-version }},codedawi/solana:latest
           build-args: |
             SOLANA_VERSION=${{ matrix.solana-version }}
             SOLANA_CLUSTER=${{ matrix.solana-network }}
